# heiwa4126-fizzbuzz

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.py  tasks.py
docs/: development-note.md
examples/: ex0.py  ex1.py  ex2.py
heiwa4126_fizzbuzz/: fizzbuzz.py
src/heiwa4126/fizzbuzz/: cli.py  fizzbuzz.py  parse.py
tests/: test_fizzbuzz.py  test_parse.py
