[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "heiwa4126-fizzbuzz"
version = "0.0.2"
description = "A simple fizzbuzz generator"
readme = "README.md"
authors = [{ name = "heiwa4126", email = "heiwa4126@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { homepage = "https://github.com/heiwa4126/heiwa4126-fizzbuzz" }
requires-python = ">=3.6"
