[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "heiwa4126-fizzbuzz"
version = "0.0.4"
description = "A simple fizzbuzz generator"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "heiwa4126" }, { email = "heiwa4126@gmail.com" }]
keywords = ["fizzbuzz", "demo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"

[project.urls]
Repository = "https://github.com/heiwa4126/heiwa4126-fizzbuzz.git"
Homepage = "https://github.com/heiwa4126/heiwa4126-fizzbuzz#readme"

[tool.ruff]
target-version = "py39"
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "W", "I", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.isort]
force-single-line = true
